# versi

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-prepare.yml  release-publish.yml  release.yml
assets/: AppIcon.icns  Info.plist  versi.desktop
crates/fnm-core/: Cargo.toml
crates/fnm-core/src/: client.rs  detection.rs  error.rs  lib.rs  progress.rs  schedule.rs  update.rs  version.rs
crates/fnm-core/src/commands/: mod.rs
crates/fnm-platform/: Cargo.toml
crates/fnm-platform/src/: environment.rs  lib.rs  paths.rs
crates/fnm-shell/: Cargo.toml
crates/fnm-shell/src/: config.rs  detect.rs  lib.rs  verify.rs
crates/fnm-ui/: Cargo.toml
crates/fnm-ui/src/: app.rs  main.rs  message.rs  settings.rs  state.rs  theme.rs
crates/fnm-ui/src/views/: main_view.rs  onboarding.rs
crates/fnm-ui/src/widgets/: install_modal.rs  mod.rs  toast_container.rs  version_list.rs
crates/versi/: Cargo.toml  build.rs
crates/versi-backend/: Cargo.toml
crates/versi-backend/src/: error.rs  lib.rs  traits.rs  types.rs
crates/versi-core/: Cargo.toml
crates/versi-core/src/: backend.rs  client.rs  detection.rs  lib.rs  progress.rs  schedule.rs  update.rs  version.rs
crates/versi-core/src/commands/: mod.rs
crates/versi-nvm/src/: client.rs  detection.rs
crates/versi-platform/: Cargo.toml
crates/versi-platform/src/: paths.rs  wsl.rs
crates/versi-shell/: Cargo.toml
crates/versi-shell/src/: config.rs  detect.rs  lib.rs  verify.rs
crates/versi-shell/src/shells/: mod.rs
crates/versi/src/: app.rs  cache.rs  icon.rs  logging.rs  main.rs  message.rs  settings.rs  state.rs  theme.rs  tray.rs
crates/versi/src/app/: init.rs
crates/versi/src/views/: about_view.rs  loading.rs  main_view.rs  mod.rs  onboarding.rs  settings_view.rs
crates/versi/src/widgets/: install_modal.rs  toast_container.rs  version_list.rs
wix/: license.rtf  main.wxs
