[workspace]
resolver = "2"
members = [
    "crates/versi",
    "crates/versi-backend",
    "crates/versi-core",
    "crates/versi-shell",
    "crates/versi-platform",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/almeidx/versi"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
chrono = { version = "0.4.43", features = ["serde"] }
dirs = "6.0"
which = "8.0.0"
reqwest = { version = "0.13.1", features = ["json"] }
open = "5.3.3"
async-trait = "0.1.89"
log = "0.4.29"
simplelog = "0.12.2"
