[package]
name = "versi-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
versi-backend = { path = "../versi-backend" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
which.workspace = true
dirs.workspace = true
reqwest.workspace = true
async-trait.workspace = true
log.workspace = true
