[package]
name = "versi"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[build-dependencies]
winresource = "0.1.30"

[dependencies]
versi-core = { path = "../versi-core" }
versi-shell = { path = "../versi-shell" }
versi-platform = { path = "../versi-platform" }

iced = { version = "0.14.0", features = ["tokio", "image"] }

tray-icon = "0.21.3"
image = { version = "0.25.9", default-features = false, features = ["png"] }
dark-light = "2.0"

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dirs.workspace = true
open.workspace = true
async-stream = "0.3.6"
log.workspace = true
simplelog.workspace = true
