[package]
name = "versi"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[build-dependencies]
winresource = "0.1.30"

[dependencies]
versi-core = { path = "../versi-core" }
versi-shell = { path = "../versi-shell" }
versi-platform = { path = "../versi-platform" }

iced = { version = "0.14.0", features = ["tokio", "image", "svg"] }

tray-icon = "0.21.3"
image = { version = "0.25.9", default-features = false, features = ["png"] }
dark-light = "2.0"

reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dirs.workspace = true
open.workspace = true
async-stream = "0.3.6"
log.workspace = true
simplelog.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSRunningApplication"] }
